# ozablas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
examples/: 01_ozaki_scheme2_example.cpp  CMakeLists.txt
include/ozablas/: ozablas.hpp
include/ozablas/core/: executor.hpp  workspace.hpp
performance_benchmarks/: 01_ozaki_scheme1_2_raw_performance.cpp  02_ozaki_scheme2_pipeline_steps.cpp  03_ozaki_scheme1_pipeline_steps.cpp  CMakeLists.txt
precision_benchmarks/: 01_ozaki_scheme2_example.cpp  02_ozaki_scheme2_fp128_benchmark.cpp  03_ozaki_scheme1_example.cpp  04_ozaki_scheme1_fp128_benchmark.cpp  CMakeLists.txt
src/: CMakeLists.txt  ozablas.cpp
src/common/: crt_math.hpp  crt_tables.hpp
src/core/: executor.cpp  workspace.cpp
src/cuda/: ozablas.hpp  pipeline.cu
src/hip/: ozablas.hpp  pipeline.hip
src/pipeline/: constants.hpp  step1_statistics.hpp  step2_slicing.hpp  step4_reconstruction.hpp
utils/: CMakeLists.txt  matrix_compare.hpp  matrix_gen.hpp  matrix_io.hpp  matrix_reference.hpp
